style.css
html {
    font-size: 20px;
    color: rgb(228, 228, 228);
    margin: 0;
    font-family:Arial, Helvetica, sans-serif;

  }

body {
  background-color: black;
  background-image: url("background.jpg");
  background-attachment: fixed;
  background-position: center;
  background-size: 120%, cover, cover;
  background-position: center, top, bottom;
  background-repeat: no-repeat;
  height: 100vh;
  margin: 0;
  overflow: hidden; /* Hide scrollbars */
}
  
ul {
    background: rgb(32, 32, 32);
    padding: 10px;
    border: 1px solid black;
  }
  
li {
    margin-left: 20px;
  }

#under-construction {
  text-shadow: -2px 2px 5px #00000077;
  height: 220px;
  padding-top: 50px;
}

.info > h1 {
  text-shadow: -2px 2px 5px #00000077;
  margin: 60px 0 0 10px;
  font-size: 20pt;
}

.info > h2 {
  text-shadow: -2px 2px 5px #00000077;
  font-size: 16pt;
  margin: 0 0 0 10px;
  text-align: left;
}

.container {
  background-color: transparent;
  position: fixed;
  inset: 0;
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: stretch;
  gap: 4px;
  margin: auto;
  max-width: 500px;
  max-height: 275px;
  background-color: rgba(240, 230, 255, .05);  
  backdrop-filter: blur(30px);
  border-radius: 20px;

  transition: transform 0.4s;
  transform-style: preserve-3d;
}

#placeholder-projects {
  justify-content: center;
  text-align: center;
}

/* This container is needed to position the front and back side */
.container-inner {
  display:flex;
  flex: 1 1 auto;
  position: relative;
  width: 100%;
  height: 100%;
  text-align: center;
  transition: transform 0.4s;
  transform-style: preserve-3d;
}

.rotated {
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
}

.stuff, .about {
  position: absolute;
  width: 100%;
  height: 100%;
  -webkit-backface-visibility: hidden; /* Safari */
  backface-visibility: hidden;
  transform: rotateX(0deg);
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: stretch;
  flex: 1 1 auto;
  border-radius: 20px;

}

.about {
  text-align: left;
  background-color: #000000aa;
  font-size: 16px;
}

.about {
  color: white;
  transform: rotateY(180deg);
  -webkit-transform: rotateY(180deg);
}

.profileWrap {
  margin: 5px 0px 0px 5px;
  filter: drop-shadow(-2px 2px 5px #00000077);
  max-height: 220px;
}

.profile {
  clip-path: inset(5% 5% 5% 5% round 25% 25% 25% 25%);
  max-width: 100%;
  height: 220px;
}

.banner {
  flex-direction: row;
  display: flex;
  justify-content: flex-start;
  flex: 1 1 auto;
  max-height:min-content;
  max-height: 220px;
}

.info {
  display:flex;
  flex-direction: column;
  justify-content: flex-start;
  text-align: left;
}

.buttonBox > a {  
  display:flex;
  flex: 0 1 100%;
  text-decoration:none;
  margin: 0 2px;
}

button {
  flex: 0 1 100%;
  background-color: #ffffff0e;
  box-shadow: -1px 1px 5px #00000055;
  border: none;
  font-size: 16px;
  border-radius: 10px;
  padding: 2px 2px;
  color: rgb(228, 228, 228);
  padding: 12px;
  letter-spacing: 0.5px;
}


button:hover {
  background-color: #44444433;
  box-shadow: -1px 1px 3px #00000033;
}

button:active {
  background-color: #231d2e33;
}


.buttonBox {
  margin: 0px 20px 8px 20px;
  gap: 4px;
  display: flex;
  flex: 1 1 auto;
}

.bar {
  min-height: 0px;
  border-width: 2px 0px 0px 0px ;
  border-color: #ffffff3a;
  border-style:solid;
  width: 94%;
  margin: 0px 15px 5px 15px;
}

#myCanvas {
  box-shadow: inset 0 0 240px #000000aa, inset 0 0 160px #000000aa, inset 0 0 120px #000000aa;
  position: fixed;
  inset: 0;
  display: flex;
  flex-direction: column-reverse;
  justify-content: left;
  align-items: stretch;
  margin: auto;
  z-index: -1;
}

